学到第九节

--- a/readme
+++ b/readme
@@ -11,9 +11,22 @@
 (2),引入：
 <script src="路径" type="text/javascript"></script>
 
-3，标签属性中
 
+3，标签属性中
+<target event="function()"></target>
+target:标签，event：事件属性,"函数名()"
 
 4，<a>标签的href中
+<a href="javascript:func();"></a>
+href:表示跳转，"javascript:":表示要跳转到执行脚本，切记要有":",
+一个js语句结束要有";"
+##########################################################
+四种引入方式的注意点:
+    1,type:这个属性可以不写，如果不写默认值就是"text/javascript"
+    2,因为页面加载顺序是由上向下，所以javascript脚本要考虑在页面中的插入位置
+    3,使用外联式时，不要在标签中写代码，因为只解析src属性的代码，标签中的代码不解析
+
+
+----------------------------------------------------------------------------
              内嵌函数
 alert(arg):弹出对话框输出arg
