--- a/readme
+++ b/readme
@@ -28,5 +28,23 @@ href:表示跳转，"javascript:":表示要跳转到执行脚本，切记要有"
 
 
 ----------------------------------------------------------------------------
+
+三种输出方式：
+1，网页输出:
+    document.write("输出内容")
+2，弹出对话框输出arg:
+    alert(arg)
+3，控制台输出:
+    console.log("输出的内容")
+shift+ctrl+i:打开浏览器控制台
+
+----------------------------------------------------------------------------
+
+注意事项:
+    1，语句结束符：";"
+    2，命名规则：字母数字下划线
+    3，名称区分大小写
+    4，注释符：1，// 2，/* */
+
+----------------------------------------------------------------------------
              内嵌函数
-alert(arg):弹出对话框输出arg
